# lgu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: detector-config.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  DETECTORS.md  OPERATIONS.md  PERFORMANCE.md  TESTING.md  THREAT_MODEL.md
examples/: site-specific-detector-config.example.json
examples/fail2ban/: jail.local.example  log-watch.conf
scripts/: run_detector_quality.sh
src/lgu/: __init__.py  __main__.py  audit.py  detector_catalog.py  provider_ranges.py  watch.py
tests/: detector_report.py  detector_validation.py  scenario_dsl.py  scenario_intake.py  scenario_matrix.py  scenario_probe.py  scenario_sanitize.py  scenario_sweeps.py  synthetic_access.py  synthetic_hygiene.py  test_batch_analysis.py  test_cross_ip_live.py  test_detector_catalog.py  test_detector_helpers_and_properties.py  test_detector_report.py  test_detector_scenarios.py  test_detector_validation.py  test_live_engine.py  test_provider_ranges.py  test_scenario_diagnostics.py  test_scenario_expectations.py  test_scenario_files.py  test_scenario_intake.py  test_scenario_matrix.py  test_scenario_sanitize.py  test_scenario_sweeps.py  test_synthetic_hygiene.py
tests/scenarios/: README.md  cross_ip.json  false_positive.json  heuristic_catalog.json  per_ip.json  proof_catalog.json  thresholds.json
tests/sweeps/: README.md  coverage_policy.json  cross_ip_boundaries.json  cross_ip_proof_boundaries.json  heuristic_boundaries.json  payload_proof_boundaries.json  per_ip_boundaries.json  (+3 more)
(+1 files in other folders)
